# sgm-rs

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
examples/: example.rs
sgm_rs/: all.html  index.html  sidebar-items.js
sgm_rs/sgm/: fn.compute_disp.html  index.html  sidebar-items.js
src/: lib.rs  sgm.rs
src/sgm_rs/: lib.rs.html  sgm.rs.html
